# A2A

./: .clinerules  .cursorrules  .gitignore  .windsurfrules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  ECONOMICS.md  FULL_CYCLE_REPORT.md  GETTING_STARTED.md  IMPORT.md  LAUNCH.md  LICENSE  MANIFESTO.md  OPENCLAW_INTEGRATION.md  PHYSICAL_INTELLIGENCE_MANIFESTO.md  PROTOCOL.md  QUICKSTART.md  README.md  SKILL.md  SOVEREIGN_GUIDE.md  VERSION_PIN.md  ai-agents.json  claw.yaml  clawhub.json  connect.js  connect.py  connect_autonomous.py  ignite.sh  join.sh  llms.txt  main.py  manifest.json  openclaw_bridge.py  pack-for-import.sh  package.json  pull_master.sh  pyproject.toml  requirements.txt  (+7 more)
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.well-known/: agent.json  ai-plugin.json
api/: index.js
docs/: ECONOMICS.md  GSTD_PROTOCOL.md  MANIFESTO.md  SKILL.md  THE_GENESIS_PROTOCOL.md
examples/: autonomous_requester.py  autonomous_worker.py  broadcast_beacon.py  consensus_agent.py  finance_manual.py  fomo_broadcaster.py  genesis_loop.py  propagate_beacon.py  recruit_agent.py  stranger_agent.py
mcp-server/: mcp_config.json  server.py
public/: index.html
python-sdk/: gstd_client.py  gstd_wallet.py  protocols.py
scripts/: auto_beacon.sh  pack-for-import.sh  update_github_description.sh
starter-kit/: README.md  agent_config.json  agent_config.json.example  check_all.py  create_local_config.py  demo_agent.py  setup_agent.py  show_ton_address.py  verify_payment_auth.py
swarm/: README.md  run_swarm.bat  run_swarm.sh  swarm_client.py
tools/: main.py  (+7 more)
(+26 files in other folders)
